--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -204,10 +204,8 @@
             </div>
             <a class="btn small" href="./los-magos-del-mercado.pdf" target="_blank" rel="noopener" aria-label="Abrir Los magos del mercado (PDF)">Abrir</a>
           </li>
-        </ul>
-      </section>
 
-          <!-- Libro 4 -->
+          <!-- Libro 4 (ahora dentro del UL) -->
           <li class="book">
             <div class="info">
               <div class="icon" aria-hidden="true">
