--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
     /* ===== Reloj UTC ===== */
     .utc-clock{
       margin-left:auto;
+      align-self:flex-start;            /* sube el reloj dentro del header */
+      transform: translateY(-6px);      /* un poquito más arriba */
       display:inline-flex; align-items:center; gap:6px;
       padding:6px 10px; border-radius:999px; font-weight:700;
       font-size:.85rem; letter-spacing:.2px;
@@ -273,7 +275,7 @@
       user-select:none;
     }
     @media (max-width:600px){
-      .utc-clock{ font-size:.8rem; padding:5px 9px; }
+      .utc-clock{ font-size:.8rem; padding:5px 9px; transform: translateY(-4px); }
     }
   </style>
 </head>
@@ -417,20 +419,49 @@
       window.addEventListener('resize', scaleAd);
     })();
 
-    /* Reloj UTC */
+    /* Reloj UTC basado en hora del servidor */
     (function(){
       var el = document.getElementById('utc-time');
-      function updateUTC(){
-        var d = new Date();
-        var hh = String(d.getUTCHours()).padStart(2,'0');
-        var mm = String(d.getUTCMinutes()).padStart(2,'0');
-        var ss = String(d.getUTCSeconds()).padStart(2,'0');
+      var offset = 0; // desfase ms: serverNow - clientNow
+
+      function tick(){
+        var now = new Date(Date.now() + offset);
+        var hh = String(now.getUTCHours()).padStart(2,'0');
+        var mm = String(now.getUTCMinutes()).padStart(2,'0');
+        var ss = String(now.getUTCSeconds()).padStart(2,'0');
         if (el) el.textContent = hh + ':' + mm + ':' + ss;
         var pill = document.querySelector('.utc-clock');
-        if (pill) pill.title = d.toUTCString();
+        if (pill) pill.title = now.toUTCString() + ' • fuente: servidor';
       }
-      updateUTC();
-      setInterval(updateUTC, 1000);
+
+      async function syncServer(){
+        try{
+          // Intento HEAD a la misma URL para leer header Date del servidor
+          var res = await fetch(window.location.href, { method:'HEAD', cache:'no-cache' });
+          var dh = res.headers.get('Date');
+          if (dh){
+            var serverDate = new Date(dh);
+            offset = serverDate.getTime() - Date.now();
+          } else {
+            // Fallback: GET muy liviano a la raíz (algunos hosts no permiten HEAD)
+            var res2 = await fetch('.', { cache:'no-cache' });
+            var dh2 = res2.headers.get('Date');
+            if (dh2){
+              var serverDate2 = new Date(dh2);
+              offset = serverDate2.getTime() - Date.now();
+            }
+          }
+        }catch(e){
+          // Si falla, se queda con el reloj local (offset 0)
+        }finally{
+          tick();
+        }
+      }
+
+      syncServer();                 // sincroniza al cargar
+      setInterval(tick, 1000);      // avanza cada segundo
+      // Re-sincroniza ocasionalmente para evitar deriva (cada 5 minutos)
+      setInterval(syncServer, 5 * 60 * 1000);
     })();
   </script>
 </body>
