--- a/index.html
+++ b/index.html
@@ -261,23 +261,24 @@
     .ad-sizer{ width:100%; max-width:728px; margin:0 auto; overflow:hidden; }
     .ad-fixed{ width:728px; height:90px; transform-origin: top left; }
 
-    /* ===== Reloj (alineado arriba a la derecha, antes del sidebar) ===== */
+    /* ===== Reloj (arriba a la derecha, solo hora local, más pequeño) ===== */
     .utc-clock{
       position:fixed;
       top:8px;
-      right: calc(var(--menuW) + 36px); /* deja espacio para el sidebar derecho */
+      right: calc(var(--menuW) + 36px);
       z-index:1000;
       display:inline-flex; align-items:center; gap:6px;
-      padding:6px 10px; border-radius:999px; font-weight:700;
-      font-size:.85rem; letter-spacing:.2px;
+      padding:4px 8px;                 /* más pequeño */
+      border-radius:999px; font-weight:700;
+      font-size:.76rem;                 /* más pequeño */
+      letter-spacing:.2px;
       background:#0b1326; color:#8fb3ff;
       border:1px solid #22407a;
       box-shadow:0 6px 18px rgba(0,0,0,.35), 0 0 0 1px rgba(255,255,255,.03) inset;
       user-select:none;
     }
-    .utc-clock .dot{ opacity:.6; margin:0 6px; }
     @media (max-width:1023px){
-      .utc-clock{ right:18px; top:8px; } /* en móvil, pegado al borde derecho */
+      .utc-clock{ right:18px; top:8px; }
     }
   </style>
 </head>
@@ -295,11 +296,9 @@
           </div>
         </div>
 
-        <!-- Reloj UTC + Local (fijo arriba, alineado a la derecha) -->
-        <div class="utc-clock" aria-label="Hora en UTC y local">
-          <span id="utc-time">--:--:--</span> UTC
-          <span class="dot">•</span>
-          <span id="loc-time">--:--:--</span> <span id="loc-tz">UTC±0</span>
+        <!-- Reloj local (fijo arriba, alineado a la derecha) -->
+        <div class="utc-clock" aria-label="Hora local">
+          <span id="loc-time">--:--:--</span> <span id="loc-tz">UTC±00</span>
         </div>
       </header>
 
@@ -423,24 +422,14 @@
       window.addEventListener('resize', scaleAd);
     })();
 
-    /* Reloj UTC (servidor) + hora local del visitante */
+    /* Reloj local del visitante (solo visible este) */
     (function(){
-      var elUTC = document.getElementById('utc-time');
       var elLoc = document.getElementById('loc-time');
       var elTz  = document.getElementById('loc-tz');
-      var offset = 0; // ms: serverNow - clientNow
 
       function fmt(n){ return String(n).padStart(2,'0'); }
 
-      function tick(){
-        var nowSrv = new Date(Date.now() + offset); // referencia servidor (UTC)
-        // UTC (sincronizada)
-        var u = nowSrv;
-        if (elUTC) elUTC.textContent = `${fmt(u.getUTCHours())}:${fmt(u.getUTCMinutes())}:${fmt(u.getUTCSeconds())}`;
-        var pill = document.querySelector('.utc-clock');
-        if (pill) pill.title = nowSrv.toUTCString() + ' • fuente: servidor';
-
-        // Local (visitante)
+      function update(){
         var loc = new Date();
         if (elLoc) elLoc.textContent = `${fmt(loc.getHours())}:${fmt(loc.getMinutes())}:${fmt(loc.getSeconds())}`;
         var offMin = -loc.getTimezoneOffset(); // minutos respecto a UTC
@@ -452,30 +441,8 @@
         if (elTz) elTz.textContent = tzStr;
       }
 
-      async function syncServer(){
-        try{
-          // Intento HEAD a la misma URL para leer header Date (UTC) del servidor
-          var res = await fetch(window.location.href, { method:'HEAD', cache:'no-cache' });
-          var dh = res.headers.get('Date');
-          if (!dh){
-            // Fallback si HEAD no está permitido
-            var res2 = await fetch('.', { cache:'no-cache' });
-            dh = res2.headers.get('Date');
-          }
-          if (dh){
-            var serverDate = new Date(dh);
-            offset = serverDate.getTime() - Date.now();
-          }
-        }catch(e){
-          // Si falla, usamos el reloj local como referencia (offset=0)
-        }finally{
-          tick();
-        }
-      }
-
-      syncServer();                 // sincroniza al cargar
-      setInterval(tick, 1000);      // avanza cada segundo
-      setInterval(syncServer, 5 * 60 * 1000); // re-sincroniza cada 5 min
+      update();
+      setInterval(update, 1000);
     })();
   </script>
 </body>
