--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DGO Trading — Señal en vivo</title>
+  <title>DGO Trading</title>
   <meta name="description" content="Sigue la señal DGO Trading en tiempo real.">
   <meta property="og:title" content="DGO Trading — Señal en vivo">
   <meta property="og:description" content="Sigue la señal DGO Trading en tiempo real.">
