--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
 
+  <!-- Favicon (.ico) -->
+  <link rel="icon" type="image/x-icon" href="/icon.ico">
+  <link rel="shortcut icon" href="/icon.ico">
+
   <!-- Tipografía profesional -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
