--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DGO Trading</title>
-  <meta name="description" content="Sigue la señal DGO Trading en tiempo real.">
-  <meta property="og:title" content="DGO Trading — Señal en vivo">
-  <meta property="og:description" content="Sigue la señal DGO Trading en tiempo real.">
+  <meta name="description" content="De la idea al algoritmo para un trading real y consistente.">
+  <meta property="og:title" content="DGO Trading">
+  <meta property="og:description" content="De la idea al algoritmo para un trading real y consistente.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
 
