--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DGO Trading</title>
-  <meta name="description" content="De la idea al algoritmo para un trading real y consistente.">
+  <meta name="description" content="De la idea al algoritmo para un trading real y consistente">
   <meta property="og:title" content="DGO Trading">
-  <meta property="og:description" content="De la idea al algoritmo para un trading real y consistente.">
+  <meta property="og:description" content="De la idea al algoritmo para un trading real y consistente">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
 
@@ -327,7 +327,7 @@
     }
     .hero-title{
       font-weight: 800;
-      font-size: clamp(1.6rem, 1.1rem + 1.8vw, 2.2rem);
+      font-size: clamp(1.3rem, 0.9rem + 1.4vw, 1.8rem);
       letter-spacing: .2px;
       line-height: 1.25;
       background: linear-gradient(90deg, #69c2ff, #38bdf8);
