--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@
       <!-- Descripción -->
       <section class="panel" aria-labelledby="about-title" id="logros">
         <!-- SLOGAN CON MARQUEE (NUEVO) -->
-        <div class="hero-marquee" aria-label="De la idea al algoritmo para un trading real y consistente.">
+        <div class="hero-marquee" aria-label="De la idea al algoritmo para un trading real y consistente">
           <div class="marquee-track">
-            <span class="hero-title">De la idea al algoritmo para un trading real y consistente.</span>
-            <span class="hero-title" aria-hidden="true">De la idea al algoritmo para un trading real y consistente.</span>
+            <span class="hero-title">De la idea al algoritmo para un trading real y consistente</span>
+            <span class="hero-title" aria-hidden="true">De la idea al algoritmo para un trading real y consistente</span>
           </div>
         </div>
 
