--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
       font-size:.78rem;
       line-height:1.45;
       color:var(--muted);
+      text-align: justify;       
+      text-justify: inter-word;     
     }
     .left-legal strong{
       display:block;
