--- a/desarrollos/index.html
+++ b/desarrollos/index.html
@@ -166,6 +166,11 @@
           </article>
 
           <article class="dev-card">
+            <div class="thumb"><img src="./pluton.png" alt="Pluton — robot" loading="lazy" decoding="async"></div>
+            <div class="dev-body"><p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p></div>
+          </article>
+
+          <article class="dev-card">
             <div class="thumb"><img src="./quantum-reversal.png" alt="Quantum Reversal — robot" loading="lazy" decoding="async"></div>
             <div class="dev-body"><p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p></div>
           </article>
